# boilerplate-interface

./: CMakeLists.txt  README.md  upp.json
apps/: CMakeLists.txt  example.cpp
include/: TBR_NAMESPACE.hpp
include/TBR_NAMESPACE/: SimpleClass.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: SimpleClassTest.cpp
